// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1";

// UserCertificates is used to transport X.509 and SSH certificates during
// device authentication.
// See the AuthenticateDevice RPC.
message UserCertificates {
  // DER-encoded X.509 user certificate.
  bytes x509_der = 1;

  // SSH certificate marshaled in the authorized key format.
  bytes ssh_authorized_key = 2;
}
